--- a/01 - JavaScript Piano Keys/index.html
+++ b/01 - JavaScript Piano Keys/index.html
@@ -12,8 +12,19 @@
       </div>
       <div class="flex">
         <div class="identifiers">
-          <h2>Piano Scale &#x2192;</h2>
-          <h2>Keyboard Button &#x2192;</h2>
+          <div class="container">
+            <div class="text-wrap">
+              <h2>Piano Scale</h2>
+            </div>
+            <div class="span-wrap">
+              <span>&#x2192;</span>
+            </div>
+          </div>
+          <div class="container">
+            <div class="text-wrap"><h2>Keyboard Button</h2></div>
+
+            <div class="span-wrap"><span>&#x2192;</span></div>
+          </div>
         </div>
         <div data-key="65" class="key">
           <span class="pianoKey">C</span>
@@ -48,6 +59,14 @@
           <kbd>K</kbd>
         </div>
       </div>
+
+      <footer>
+        <p>Javascript30 challenge by <a href="https://twitter.com/wesbos" target="_blank" ">wesbos</a></p><br>
+
+        <p>This project was created by <a href="https://twitter.com/Rohil_Cris" target="_blank">Rohil</a></p><br>
+
+        <p><a href="https://github.com/rohilpinto/JavaScript30-Rohil-/tree/master/01%20-%20JavaScript%20Piano%20Keys" target="_blank">Git-hub Repo</a></p>
+      </footer>
     </div>
 
     <audio data-key="65" src="sounds/c 3.wav"></audio>
